--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 numpy==1.26.2
+mapbox==0.18.1
 pandas==2.1.4
 python-dateutil==2.8.2
 Faker==20.1.0
 faker_education==1.2.1
+ratelimit==2.2.1
+tqdm==4.66.1
