--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,3 @@
-[tool.ruff]
-line-length = 160
-
-[tool.ruff.lint]
-select = ["E4", "E7", "E9", "F"]
-extend-select = ["B", "W", "C"]
-ignore = ["C400", "C401"]
-
 [project]
 name = "fake_membership_list"
 version = "1.0.0"
@@ -28,10 +20,78 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "bandit[toml,sarif]==1.8.3",
+    "mypy==1.15.0",
+    "pandas-stubs==2.2.3.250308",
     "pre-commit==4.2.0",
-    "ruff==0.11.4"
-]
-github-actions = [
     "ruff==0.11.4",
-    "ydiff==1.4.2"
+    "types-python-dateutil==2.9.0.20241206",
+    "types-tqdm==4.67.0.20250404",
+]
+
+[tool.ruff]
+line-length = 160
+target-version = "py310"
+include = [
+    "src/**/*.py",
+    "tests/**/*.py",
+]
+
+[tool.ruff.lint]
+select = [
+    "A",
+    "ANN",
+    "ARG",
+    "B",
+    "BLE",
+    "C",
+    "C4",
+    "C90",
+    "D",
+    "E",
+    "EM",
+    "F",
+    "G",
+    "I",
+    "ICN",
+    "ISC",
+    "LOG",
+    "N",
+    "PT",
+    "PTH",
+    "Q",
+    "RET",
+    "RSE",
+    "RUF",
+    "SIM",
+    "SLF",
+    "T20",
+    "TC",
+    "TID",
+    "UP",
+    "W",
+    "YTT",
+]
+ignore = [
+    "D100",
+    "D103",
+    "D104",
+    "D203",
+    "D212",
+    "ANN001",
+]
+
+[tool.mypy]
+[[tool.mypy.overrides]]
+module = [
+    "mapbox",
+    "ratelimit",
+    "faker_education"
+]
+ignore_missing_imports = true
+
+[tool.bandit]
+exclude_dirs = [
+    "./tests/",
+    "./.venv/",
 ]
