--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { "file" = "LICENSE" }
-authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
+authors = [{ "name" = "Ramona T", "email" = "ramona.t.dsa@pm.me" }]
 urls = { "GitHub" = "https://github.com/MaineDSA/fake_membership_list" }
 dependencies = [
     "attrs==25.4.0",
