--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,28 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
 repos:
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: 'v5.0.0'
-      hooks:
-          - id: check-yaml
-          - id: check-ast
-          - id: check-builtin-literals
-          - id: check-case-conflict
-          - id: check-docstring-first
-          - id: check-executables-have-shebangs
-          - id: check-toml
-          - id: debug-statements
-          - id: requirements-txt-fixer
-          - id: mixed-line-ending
-    - repo: https://github.com/asottile/pyupgrade
-      rev: 'v3.19.1'
-      hooks:
-          - id: pyupgrade
-            args: ['--py310-plus']
-    - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: 'v0.11.12'
-      hooks:
-          - id: ruff
-          - id: ruff-format
-    - repo: https://github.com/PyCQA/bandit
-      rev: '1.8.3'
-      hooks:
-          - id: bandit
-            args: ['--confidence-level=medium', '--severity-level=medium', '--configfile', 'pyproject.toml']
-            additional_dependencies: ['bandit[toml]']
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: 'v6.0.0'
+    hooks:
+      - id: check-yaml
+      - id: check-ast
+      - id: check-builtin-literals
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: check-executables-have-shebangs
+      - id: check-toml
+      - id: debug-statements
+      - id: mixed-line-ending
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: 'v0.15.1'
+    hooks:
+      - id: ruff-check
+        args: ['--fix']
+      - id: ruff-format
+  - repo: https://github.com/PyCQA/bandit
+    rev: '1.9.3'
+    hooks:
+      - id: bandit
+        args: ['--confidence-level', 'medium']
+        files: '^src'
